@@ -48,7 +48,7 @@ cmd.install.detail=To see all tools available for installation, call "ide help"
 cmd.intellij=Tool commandlet for IntelliJ (IDE)
 cmd.intellij.detail=IntelliJ is a popular Integrated Development Environment for Java developed by JetBrains. Detailed documentation can be found at https://www.jetbrains.com/idea/documentation/
 cmd.jasypt=Tool commandlet for Jasypt (encryption/decryption).
-cmd.jasypt.detail=Jasypt is a library for encrypting and decrypting sensitive data in Java applications. Detailed documentation can be found at http://www.jasypt.org/
+cmd.jasypt.detail=Jasypt is a library for encrypting and decrypting sensitive data in Java applications. Additional Jasypt options like "algorithm" can be configured via variable JASYPT_OPTS. Detailed documentation can be found at http://www.jasypt.org/
 cmd.jasypt.val.command=Modes (encrypt | decrypt)
 cmd.jasypt.val.masterPassword=master password.
 cmd.jasypt.val.secret=The secret to be encrypted or decrypted.
