@@ -48,7 +48,7 @@ cmd.install.detail=Die Liste an zur Installation verfügbaren Werkzeugen können
 cmd.intellij=Werkzeug Kommando für Intellij (IDE)
 cmd.intellij.detail=IntelliJ ist eine beliebte Java-Entwicklungsumgebung, von JetBrains entwickelt. Detaillierte Dokumentation ist zu finden unter https://www.jetbrains.com/idea/documentation/
 cmd.jasypt=Werkzeug Kommando für Jasypt.
-cmd.jasypt.detail=Jasypt ist eine Bibliothek zum Verschlüsseln und Entschlüsseln sensibler Daten in Java-Anwendungen. Detaillierte Dokumentation ist zu finden unter http://www.jasypt.org/
+cmd.jasypt.detail=Jasypt ist eine Bibliothek zum Verschlüsseln und Entschlüsseln sensibler Daten in Java-Anwendungen. Zusätzliche Jasypt Optionen wie "algorithm" können mittels der Variable JASYPT_OPTS konfiguriert werden. Detaillierte Dokumentation ist zu finden unter http://www.jasypt.org/
 cmd.jasypt.val.command=Mode (encrypt | decrypt)
 cmd.jasypt.val.masterPassword=master Passwort.
 cmd.jasypt.val.secret=Das zu verschlüsselnde oder zu entschlüsselnde Geheimnis.
